--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
   </div>
   <div class="spinner hidden" id="spinner"></div>
   <!--build:js js/main.min.js -->
-  <script src="starting-data.js"></script>
+  <script src="js/starting-data.js"></script>
   <script src="js/index.js"></script>
   <!-- endbuild -->
 </body>
