--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,31 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <!--build:css css/style.min.css -->
   <link rel="stylesheet" href="css/style.css">
   <!--endbuild-->
   <title>URL Bookmark App</title>
 </head>
+
 <body>
   <h1 class="app-header">URL BOOKMARK APP</h1>
   <div class="content" id="content">
     <div class="overview" id="overview">
       <form id="add-url-form" name="add-url-form">
         <input
-          type="text"
-          name="url"
-          class="url-input"
-          id="input-url"
-          value="https://"
-          autofocus="true"
-          autocomplete="off"
-          required
-          pattern="(http|https):\/\/(\w+:{0,1}\w*@)?(\S+)(:[0-9]+)?(\/|\/([\w#!:.?+=&%@!\-\/]))?"
-          title="Invalid URL. Note all URLs must include an https:// or http:// prefix.">
+            type="text"
+            name="url"
+            class="url-input"
+            id="input-url"
+            value="https://"
+            autofocus="true"
+            autocomplete="off"
+            required
+            pattern="(http|https):\/\/(\w+:{0,1}\w*@)?(\S+)(:[0-9]+)?(\/|\/([\w#!:.?+=&%@!\-\/]))?"
+            title="Invalid URL. Note all URLs must include an https:// or http:// prefix."
+        >
         <input type="submit" value="ADD" class="submit-button">
       </form>
       <button class="load-sample-data" id="load-sample-data">LOAD DATA</button>
@@ -32,10 +34,12 @@
       <h2>BOOKMARKED LINKS</h2>
       <div class="navigation">
         <button class="navigation-button" id="decrement">
-          <img src="images/keyboard-left-arrow-button.png"></button>
-            <div id="page-numbers" class="page-numbers">
-            </div>
-            <button class="navigation-button" id="increment"><img src="images/keyboard-right-arrow-button.png"></button>
+          <img src="images/keyboard-left-arrow-button.png" alt="left-arrow"></button>
+        <div id="page-numbers" class="page-numbers">
+        </div>
+        <button class="navigation-button" id="increment">
+          <img src="images/keyboard-right-arrow-button.png" alt="right-arrow">
+        </button>
       </div>
       <ul class="link-list" id="link-list"></ul>
     </div>
